--- a/linking_ui/OntoSimUI/src/app/pg2/pg2.component.html
+++ b/linking_ui/OntoSimUI/src/app/pg2/pg2.component.html
@@ -3,10 +3,10 @@ This is pg-2
 
 <body>
 	<label for="onto2FileFieldSrc">Select a Source: </label>
-	<input type="file" id ="onto2FileFieldSrc" (change)="onFileSelectedSrc($event)"/>
+	<input type="file" id ="onto2FileFieldSrc" (change)="onFileSelectedSrc2($event)"/>
 
 	<label for="onto2FileFieldTrgt">Select a Target: </label>
-	<input type="file" id ="onto2FileFieldTrgt" (change)="onFileSelectedTrgt($event)"/>
+	<input type="file" id ="onto2FileFieldTrgt" (change)="onFileSelectedTrgt2($event)"/>
 
 
 	<button (click)="crtDictFile()">Upload File</button>
