--- a/linking_ui/OntoSimUI/src/app/pg1/pg1.component.html
+++ b/linking_ui/OntoSimUI/src/app/pg1/pg1.component.html
@@ -5,11 +5,11 @@
 	</tr>
 	<tr>
 		<td> <label for="onto1FileFieldSrc">Select a Source: </label> </td>
-		<td> <input type="file" id ="onto1FileFieldSrc" ng2FileSelect (change)="onFileSelectedSrc($event)"/> </td>
+		<td> <input type="file" id ="onto1FileFieldSrc" ng2FileSelect (change)="onFileSelectedSrc1($event)"/> </td>
 	</tr>
 	<tr>
 		<td> <label for="onto1FileFieldTrgt">Select a Target: </label> </td>
-		<td> <input type="file" id ="onto1FileFieldTrgt" (change)="onFileSelectedTrgt($event)"/> </td>
+		<td> <input type="file" id ="onto1FileFieldTrgt" (change)="onFileSelectedTrgt1($event)"/> </td>
 	</tr>
 	<tr>
 		<td><button (click)="uploadOWLFile()" class="btn btn-success btn-s">Upload File</button></td>
