Modified UI component

--- a/linking_ui/OntoSimUI/src/app/app.component.html
+++ b/linking_ui/OntoSimUI/src/app/app.component.html
@@ -6,13 +6,8 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Ontology Similarity</a>
+      <a class="navbar-brand" href="#">Ontology Connection</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a routerLink="/pg1">Page 1</a></li>
-      <li><a routerLink="/pg2">Page 2</a></li>
-      <li><a routerLink="/pg3">Page 3</a></li>
-    </ul>
   </div>
 </nav>
 
