updating dropdown option

--- a/linking_ui/OntoSimUI/src/app/pg1/pg1.component.html
+++ b/linking_ui/OntoSimUI/src/app/pg1/pg1.component.html
@@ -5,12 +5,12 @@
 			<select (change)="onDBSelect($event)">
 			  <option value="">--Select--</option>
 			  <option value="Anatomy">Anatomy</option>
-			  <option value="LargeBio-track1">LargeBio-track1</option>
+<!-- 			  <option value="LargeBio-track1">LargeBio-track1</option>
 			  <option value="LargeBio-track2">LargeBio-track2</option>
 			  <option value="LargeBio-track3">LargeBio-track3</option>
 			  <option value="LargeBio-track4">LargeBio-track4</option>
 			  <option value="LargeBio-track5">LargeBio-track5</option>
-			  <option value="LargeBio-track6">LargeBio-track6</option>
+			  <option value="LargeBio-track6">LargeBio-track6</option> -->
 			</select>
 		</td>
 	</tr>
